# learn-revm

./: .gitignore  Cargo.toml  EVM_LEARNING_GUIDE.md  LEARNING_PATH.md  LEARNING_STAGE1.md  LEARNING_STAGE2.md  README.md  STAGE1_COMPLETION.md  STAGE1_LEARNING_LOG.md  STAGE1_PRACTICE.md  STAGE2_ARCHITECTURE.md  STAGE2_PROGRESS.md
stage1-stack-machine/: Cargo.toml
stage1-stack-machine/src/: lib.rs  practice1_stack_basics.rs  practice1_stack_basics_copy.rs  practice2_memory_ops.rs  practice3_jump_safety.rs  practice4_gas_calculation.rs  practice5_complete_sequence.rs
stage2-architecture/: Cargo.toml
stage2-architecture/src/: lib.rs
stage2-architecture/src/database/: memory.rs  traits.rs
stage2-architecture/src/evm/: call_stack.rs  engine.rs  mod.rs
stage2-architecture/src/models/: types.rs
stage2-architecture/src/spec/: mod.rs
