[workspace]
members = [
    "stage1-stack-machine",
    "stage2-architecture",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EVM Learning Project"]
description = "Progressive EVM implementation learning project"

[workspace.dependencies]
# 共享依赖
primitive-types = "0.12"
hex = "0.4"
